load("@com_github_grpc_grpc_web//bazel:closure_grpc_web_library.bzl", "closure_grpc_web_library")

proto_library(
  name = "echo_proto",
  srcs = [
    "echo.proto",
  ],
  deps = [
    "@com_google_protobuf//:empty_proto",
  ]
)

closure_grpc_web_library(
  name = "echo_web_lib",
  deps = [":echo_proto"]
)

